Added frontend authentication

--- a/cool-wheelsclient/src/styles/_buyers.scss
+++ b/cool-wheelsclient/src/styles/_buyers.scss
@@ -1,1 +1,11 @@
 
+#buyer-container {
+  display: flex;
+  flex-wrap: wrap;
+  // justify-content: center;
+  margin: 24px auto;
+}
+
+#buyer-card {
+  width: 500px;
+}
