--- a/cool-wheelsclient/src/styles/styles.scss
+++ b/cool-wheelsclient/src/styles/styles.scss
@@ -1,8 +1,13 @@
 @charset 'utf-8';
 
 // Import styles
+@import 'register';
+@import 'login';
 @import 'buyers';
+@import 'buyer-form';
+@import 'profile';
 
 html, body {
   margin: 0;
+  background-color: #FEA500;
 }
